Changed doctype to html 5'

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<!DOCTYPE html >
 
 <html>
 <head>
-  <meta http-equiv="cache-control" content="no-cache">
+  <meta http-equiv="Cache-Control" content="no-cache">
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="author" content="Dylan Evans, dylan@dje.me"/>
+  <meta name="description" content="My Blog" />
    
   <title>{{ page.title }}</title>
   <link id="base-style" rel="stylesheet" type="text/css" href="/css/base.css">
@@ -11,8 +13,6 @@
   <link rel="apple-touch-icon" href="/images/cf_icon.png">
   <link rel="alternate" type="application/rss+xml" 
     title="Content Free Blog" href="http://dylan-evans.github.com/rss.xml">
-  
-  </script>
   
 </head>
 
