--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 
 <html>
 <head>
-  <meta http-equiv="Cache-Control" content="no-cache">
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <meta http-equiv="Cache-Control" content="no-cache" />
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta name="author" content="Dylan Evans, dylan@dje.me"/>
   <meta name="description" content="My Blog" />
    
