--- a/_includes/theme_select.html
+++ b/_includes/theme_select.html
@@ -11,12 +11,12 @@ Select/Change the current theme
           title="Themes are mostly for development, but may provide some novelty ;-)" >
             <option value="base.css">Default</option>
             <option value="test.css">Test</option>
-            <option value="font_test.css">Font test</option>
+            <option value="font_test.css">Font test</option >
             <option value="alien.css">Alien</option>
         </select>
     </form>
     
-    <!-- Naybe add font selector here -->
+    <!-- Maybe add font selector here -->
     
     <!-- and font size selector here -->
     
