Adds persist JS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,8 @@
   <link rel="alternate" type="application/rss+xml" 
     title="Content Free Blog" href="http://dylan-evans.github.com/rss.xml">
   
+  <script type="text/javascript" src="/js/persist-js.0.1.0/persist.js"><!-- --></script>
+  
 </head>
 
 <body>
