--- a/css/base.css
+++ b/css/base.css
@@ -202,13 +202,11 @@ a.ni:visited {
     font-weight: bold;
     list-style-type: none;
     height: 120px;
-    -pie-background: linear-gradient(#EEFF99, #66EE33);
 }
 
 ul.menu {
-    font-family: arial;
+    font-family: Helvetica;
     font-size: 8pt;
-    font-weight: bold;
     list-style-type: none;
     width: 48px;
     padding: 4px;
@@ -235,6 +233,8 @@ ul.menu {
     text-decoration: none;
     display: block;
     padding: 2px;
+    font-weight: normal;
+    letter-spacing: 1px;
 }
 
 #menu a:visited {
