--- a/css/base.css
+++ b/css/base.css
@@ -6,7 +6,7 @@
 body {
     margin: 10px;
     background-color: black;
-    background-image: url(/test/x2.jpg);
+    background-image: url(/images/ocean-bg.jpeg);
     background-repeat: no-repeat;
 }
 
