Update blog widget

--- a/_includes/blog_widget.html
+++ b/_includes/blog_widget.html
@@ -10,5 +10,5 @@
         </tr>
     {% endfor %}
     </table>
-    <a href="/blog.html">All posts</a>
+    <a class="all-posts" href="/blog.html">All posts</a>
 </div>
