--- a/css/base.css
+++ b/css/base.css
@@ -114,12 +114,18 @@ img {
 }
 
 #blog-widget {
-
+    
 }
 
 #blog-widget .post-title {
     width: 200px;
     padding-left: 20px;
+}
+
+#blog-widget .all-posts {
+    font-size: small;
+/*    font-style: oblique;*/
+    font-weight: bold;
 }
 
 
@@ -207,7 +213,7 @@ a.ni:visited {
 }
 
 ul.menu {
-    font-family: Helvetica;
+    font-family: Helvetica, Arial, sans-serif;
     font-size: 8pt;
     list-style-type: none;
     width: 48px;
