--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,11 +1,13 @@
-<div>
-  <ul id="menu" class="module">
+<div id="menu" class="module">
+  <ul>
     <li><a href="/" title="index page">Home</a></li>
     <li><a href="/blog.html">Blog</a></li>
     <li><a href="/links.html" title="Some of my favourites">Links</a></li>
     <li><a href="/quotes.html" title="Favourite quotes">Quotes</a></li>
     <li><a href="/about.html" title="About this site">About</a></li>
-    <hr/>
+  </ul>
+  <hr/>
+  <ul>
     <li><a href="http://github.com/dylan-evans" title="Git Page">GitHub Page</a></li>
     <li><a href="http://gist.github.com/dylan-evans" title="Code Snippets">My Gists</a></li>
   </ul>
