google site verification

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,8 @@
 
 <html>
 <head>
+  <meta name="google-site-verification"
+  content="QRwv4KXG84LAI7ymIf98zP2A4A36YydwWnkVofR0EbQ" />
   <meta http-equiv="Cache-Control" content="no-cache" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta name="author" content="Dylan Evans, dylan@dje.me"/>
