--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     title="Content Free Blog" href="http://dylan-evans.github.com/rss.xml">
   
   <script type="text/javascript" src="/js/persist-js-0.1.0/persist.js"><!-- --></script>
-  
+  {% include google_analytics.html %}
 </head>
 
 <body>
