--- a/css/base.css
+++ b/css/base.css
@@ -103,7 +103,8 @@ img {
     -webkit-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
     -moz-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
     box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
-    font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
+    /* font-family: "Lucida Grande", Helvetica, Arial, sans-serif; */
+    font-family: Georgia, serif;
     font-size: small; /* Arial only seems to ever look ok in small or bold form */
     behavior: url(/js/PIE.htc);
 }
