Change font size back to small
I hate fonts!

--- a/css/base.css
+++ b/css/base.css
@@ -105,7 +105,7 @@ img {
     box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
     font-family: Helvetica, Arial, sans-serif; 
     /* font-family: "Courier New", Georgia, serif; */
-    font-size: medium; /* Arial only seems to ever look ok in small or bold form */
+    font-size: small; /* Arial only seems to ever look ok in small or bold form */
     behavior: url(/js/PIE.htc);
 }
 
