Add simple theme

--- a/_includes/theme_select.html
+++ b/_includes/theme_select.html
@@ -13,6 +13,7 @@ Select/Change the current theme
             <option value="test.css">Test</option>
             <option value="font_test.css">Font test</option >
             <option value="alien.css">Alien</option>
+			<option value="simple.css">Simple</option>
         </select>
     </form>
     
