--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
   <meta name="description" content="My Blog" />
    
   <title>{{ page.title }}</title>
-  <link id="base-style" rel="stylesheet" type="text/css" href="/css/base.css">
+  <link id="base-style" rel="stylesheet" type="text/css" href="/css/simple.css">
   <link rel="icon" type="image/png" href="/images/cf_icon.png">
   <link rel="apple-touch-icon" href="/images/cf_icon.png">
   <link rel="alternate" type="application/rss+xml" 
