--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,7 @@
 
 <html>
 <head>
-  <meta name="google-site-verification"
-  content="mpJTiq4sRQ5dSoZZXTP0HibkZ10LstK7RVZAcJXGuRU" />
+  <meta name="google-site-verification" content="SdPDoTHuAcLLtQpSYDU3cy5fYuIuaNrw4iAhLdivHig" />
   <meta http-equiv="Cache-Control" content="no-cache" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta name="author" content="Dylan Evans, dylan@dje.me"/>
