Modify default layout to use blueprint

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html >
 
 <html>
-<head>
-  <meta name="google-site-verification" content="WAPyk4HcSqGz0_lYGo5gWnVfetxHAk_H54SvOP24vlI" />
   <meta http-equiv="Cache-Control" content="no-cache" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta name="author" content="Dylan Evans, dylan@dje.me"/>
   <meta name="description" content="My Blog" />
    
   <title>{{ page.title }}</title>
-  <link id="base-style" rel="stylesheet" type="text/css" href="/css/simple.css">
+  
+  <link rel="stylesheet" type="text/css" href="/css/blueprint/screen.css" >
+  <link rel="stylesheet" href="../../blueprint/print.css" type="text/css" media="print">
+    <!--[if lt IE 8]><link rel="stylesheet" href="../../blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
+  <link rel="stylesheet" href="../../blueprint/plugins/fancy-type/screen.css" type="text/css" media="screen, projection">
+  <!--  <link id="base-style" rel="stylesheet" type="text/css" href="/css/simple.css"> -->
   <link rel="icon" type="image/png" href="/images/cf_icon.png">
   <link rel="apple-touch-icon" href="/images/cf_icon.png">
   <link rel="alternate" type="application/rss+xml" 
