Attempt as layout with blueprint

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,18 +28,18 @@
     </div>
     <div class="prop"></div>
 
-    <div id="sidebar-left">
+    <div id="sidebar-left" class="span-3">
         {% include menu.html %}
     
         {% include theme_select.html %}
     </div>
-    <div id="page-content" class="soft-corners">
+    <div id="page-content" class="soft-corners span-12">
       {% include ie6nomore.html %}
       {{ content }}
       
     </div>
     
-    <div id="sidebar-right">
+    <div id="sidebar-right" class="span-2">
         {% include twitter.html %}
     </div>
     
