--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,8 @@
 <body>
   <div class="page">
     <div class="page-header">
-      <a href="/"><img alt="CONTENT FREE" src="/images/cf_banner10.png"></a>
+	  <h1>dje.me : Content Free</h1>
+      <!-- <a href="/"><img alt="CONTENT FREE" src="/images/cf_banner10.png"></a> -->
     </div>
     <div class="prop"></div>
 
