--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,9 @@
   <title>{{ page.title }}</title>
   
   <link rel="stylesheet" type="text/css" href="/css/blueprint/screen.css" >
-  <link rel="stylesheet" href="../../blueprint/print.css" type="text/css" media="print">
+  <link rel="stylesheet" href="/css/blueprint/print.css" type="text/css" media="print">
     <!--[if lt IE 8]><link rel="stylesheet" href="../../blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
-  <link rel="stylesheet" href="../../blueprint/plugins/fancy-type/screen.css" type="text/css" media="screen, projection">
+  <link rel="stylesheet" href="/css/blueprint/plugins/fancy-type/screen.css" type="text/css" media="screen, projection">
   <!--  <link id="base-style" rel="stylesheet" type="text/css" href="/css/simple.css"> -->
   <link rel="icon" type="image/png" href="/images/cf_icon.png">
   <link rel="apple-touch-icon" href="/images/cf_icon.png">
