Includes new banners

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,7 @@
 <body>
   <div class="page">
     <div class="page-header">
-	  <h1>dje.me : Content Free</h1>
-      <!-- <a href="/"><img alt="CONTENT FREE" src="/images/cf_banner10.png"></a> -->
+      <a href="/"><img alt="CONTENT FREE" src="/images/dje_banner_w.png"></a>
     </div>
     <div class="prop"></div>
 
