Adds small and medium banner

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 <body>
   <div class="page">
     <div class="page-header">
-      <a href="/"><img alt="CONTENT FREE" src="/images/dje_banner_w.png"></a>
+      <a href="/"><img alt="CONTENT FREE" src="/images/dje_banner_small.png"></a>
     </div>
     <div class="prop"></div>
 
