Removes pointless footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,9 +40,9 @@
       
     </div>
     
-  <div class="page-footer span-24"> 
+  <!-- <div class="page-footer span-24"> 
     Last Build: {{ site.time }} by <a href="mailto:dylan@dje.me">Dylan Evans</a>
-  </div>
+  </div> -->
   {% include google_analytics.html %}
   </div>
  
