Uses nano banner

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 <body>
   <div class="page">
     <div class="page-header">
-      <a href="/"><img alt="CONTENT FREE" src="/images/dje_banner_micro.png"></a>
+      <a href="/"><img alt="CONTENT FREE" src="/images/dje_banner_nano.png"></a>
     </div>
     <div class="prop"></div>
 
