--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html >
 
 <html>
-  <meta http-equiv="Cache-Control" content="no-cache" />
+  <meta http-equiv="cache-control" content="no-cache" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta name="author" content="Dylan Evans, dylan@dje.me"/>
   <meta name="description" content="My Blog" />
