Adds life to the menu.

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -8,6 +8,7 @@
   </ul>
   <hr/>
   <ul>
+	<li><a href="/life/life.html" title="John Conway's Game Of Life">Game Of Life</a></li>
     <li><a href="http://github.com/dylan-evans" title="Git Page">GitHub Page</a></li>
     <li><a href="http://gist.github.com/dylan-evans" title="Code Snippets">My Gists</a></li>
   </ul>
