--- a/life/life.css
+++ b/life/life.css
@@ -3,18 +3,17 @@ body {
 	font-family: helvetica, arial, sans-serif;
 }
 
+/*
 #main-pane {
-	padding: 10px;
-	width: 610px;
-	height: 100%;
+	padding-left: 10px;
+	width: auto;
 	background: #777777;
 	border: 1px solid black;
 	border-radius: 10px;
 }
+*/
 
 #world {
-	width: 600px;
-	height: 400px;
 	border: 3px groove #CCCCCC;
 }
 
