Adds link to bubbles wallpaper app.

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -13,3 +13,8 @@
     <li><a href="http://gist.github.com/dylan-evans" title="Code Snippets">My Gists</a></li>
   </ul>
 </div>
+
+<div style="margin: 2px; padding: 2px; background: #D0D0D0;"><a href="https://play.google.com/store/apps/details?id=me.dje.Bubbles">
+		<img style="float: left" width="34px" height="34px" src="/images/lricon1.jpeg" alt="Bubbles Icon" />
+		<div style="margin-left: 36px;"><i>Android:</i><br/> <b>Now with bubbles!</b></div>
+</a></div>
