Moves style to css file and adds groovy border-radius on app links.

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -14,7 +14,9 @@
   </ul>
 </div>
 
-<div style="margin: 2px; padding: 2px; background: #D0D0D0;"><a href="https://play.google.com/store/apps/details?id=me.dje.Bubbles">
-		<img style="float: left" width="34px" height="34px" src="/images/lricon1.jpeg" alt="Bubbles Icon" />
-		<div style="margin-left: 36px;"><i>Android:</i><br/> <b>Now with bubbles!</b></div>
-</a></div>
+<div class="app-link" style="">
+	<a href="https://play.google.com/store/apps/details?id=me.dje.Bubbles">
+		<img class="app-link-icon" src="/images/lricon1.jpeg" alt="Bubbles Icon" />
+		<div class="app-link-text" ><i>Android:</i><br/> <b>Now with bubbles!</b></div>
+	</a>
+</div>
